--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,6 +3,10 @@
 
 name: Java CI with Maven
 
+env:
+  STACK: java
+  CONTINUE_ON_ERROR: false
+  
 on:
   push:
     branches: [ master ]
@@ -15,10 +19,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: 'Checkout repository on branch: ${{ github.REF }}'
+      uses: actions/checkout@v2
+      continue-on-error: ${{ env.CONTINUE_ON_ERROR }}
       with:
-        java-version: '1.8'
+        ref: ${{ github.REF }}
+        fetch-depth: 0
+        
+    - name: set up JDK 11
+      id: setup_jdk
+      if: ${{ env.STACK == 'java' }}
+      uses: actions/setup-java@v2
+      continue-on-error: ${{ env.CONTINUE_ON_ERROR }}
+      with:
+        java-version: '11'
+        distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
