--- a/pom.xml
+++ b/pom.xml
@@ -22,26 +22,31 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>3.0.2</version>
-					<executions>
-						<execution>
-						<id>default-deploy</id>
-						<phase>deploy</phase>
-							<goals>
-								<goal>deploy</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<serverId>nexus</serverId>
-						<nexusUrl>http://54.159.177.72:8081//nexus/</nexusUrl>
-						<skipStaging>true</skipStaging>
-					</configuration>
-			</plugin>
-		</plugins>
+	    <plugins>
+		<plugin>
+			<groupId>org.sonatype.plugins</groupId>
+			<artifactId>nexus-staging-maven-plugin</artifactId>
+			<version>3.0.2</version>
+			<executions>
+				<execution>
+					<id>default-deploy</id>
+					<phase>deploy</phase>
+					<goals>
+						<goal>deploy</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<serverId>nexus</serverId>
+				<nexusUrl>http://54.159.177.72:8081//nexus/</nexusUrl>
+				<skipStaging>true</skipStaging>
+			</configuration>
+		</plugin>
+            	<plugin>
+                	<groupId>org.sonarsource.scanner.maven</groupId>
+                	<artifactId>sonar-maven-plugin</artifactId>
+                	<version>3.2</version>
+            	</plugin>			
+	     </plugins>
 	</build>
 </project>
