--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,9 +35,9 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean package --file pom.xml
     - name: SonarQube Scan
-      run: mvn -B sonar:sonar -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=SONAR_TOKEN
+      run: mvn sonar:sonar -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=SONAR_TOKEN
     - uses: sonarsource/sonarqube-scan-action@master
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
