--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,8 @@ name: Java CI with Maven
 env:
   STACK: java
   CONTINUE_ON_ERROR: false
-  
+  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   
 on:
   push:
     branches: [ master ]
@@ -20,25 +21,21 @@ jobs:
 
     steps:
     - name: 'Checkout repository on branch: ${{ github.REF }}'
-      uses: actions/checkout@v2
+      uses: actions/checkout@v1
       continue-on-error: ${{ env.CONTINUE_ON_ERROR }}
       with:
         ref: ${{ github.REF }}
         fetch-depth: 0
         
-    - name: set up JDK 11
+    - name: set up JDK 1.8
       id: setup_jdk
       if: ${{ env.STACK == 'java' }}
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v1
       continue-on-error: ${{ env.CONTINUE_ON_ERROR }}
       with:
-        java-version: '11'
-        distribution: 'adopt'
+        java-version: '1.8'
     - name: Build with Maven
       run: mvn clean package --file pom.xml
     - name: SonarQube Scan
-      run: mvn sonar:sonar -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN
-    - uses: sonarsource/sonarqube-scan-action@master
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}    
+      run: mvn sonar:sonar -Dsonar.host.url=${{ env.SONAR_HOST_URL }} -Dsonar.login=${{ env.SONAR_TOKEN }}
+    - uses: sonarsource/sonarqube-scan-action@master   
