--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,5 +37,5 @@ jobs:
     - name: Build with Maven
       run: mvn clean package --file pom.xml
     - name: SonarQube Scan
-      run: mvn sonar:sonar -Dsonar.host.url=${{ env.SONAR_HOST_URL }} -Dsonar.login=${{ env.SONAR_TOKEN }}
+      run: mvn sonar:sonar -Dsonar.host.url=${{ env.SONAR_HOST_URL }} -Dsonar.login=${{ env.SONAR_TOKEN }} -Dsonar.projectKey=springboot -Dsonar.sources=src
     - uses: sonarsource/sonarqube-scan-action@master   
