--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,20 +36,20 @@ jobs:
         java-version: '1.8'
     - name: Build with Maven
       run: mvn clean package --file pom.xml
-    - name: SonarQube Scan
-      run: mvn sonar:sonar -Dsonar.host.url=${{ env.SONAR_HOST_URL }} -Dsonar.login=${{ env.SONAR_TOKEN }}
-    - uses: sonarsource/sonarqube-scan-action@master 
-      with:
-        args: >
-          -Dsonar.projectKey=hello-springboot
-          -Dsonar.sources=src/
+#     - name: SonarQube Scan
+#       run: mvn sonar:sonar -Dsonar.host.url=${{ env.SONAR_HOST_URL }} -Dsonar.login=${{ env.SONAR_TOKEN }}
+#     - uses: sonarsource/sonarqube-scan-action@master 
+#       with:
+#         args: >
+#           -Dsonar.projectKey=hello-springboot
+#           -Dsonar.sources=src/
     - name: Deploy to tomcat
       uses: appleboy/scp-action@master
       with:
         host: 18.221.232.111
+        port: 8080        
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SSH_KEY }}
-        rm: true
-        port: 8080        
+        rm: true        
         source: "target/*.war"
-        target: "${{ secrets.REMOTE_DIR }}/springboot.war"
+        target: "${{ secrets.REMOTE_DIR }}"
