--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,10 +46,10 @@ jobs:
     - name: Deploy to tomcat
       uses: appleboy/scp-action@master
       with:
-        host: 18.221.232.111
-        port: 8080        
-        username: ${{ secrets.REMOTE_USER }}
+        host: ec2-18-221-232-111.us-east-2.compute.amazonaws.com
+        port: 8080
+        username: root
         key: ${{ secrets.SSH_KEY }}
         rm: true        
         source: "target/*.war"
-        target: "${{ secrets.REMOTE_DIR }}"
+        target: "/opt/apache-tomcat-9.0.56/webapps"
