--- a/.github/workflows/tomcat-deploy.yml
+++ b/.github/workflows/tomcat-deploy.yml
@@ -46,9 +46,9 @@ jobs:
     - name: Deploy to tomcat
       uses: appleboy/scp-action@master
       with:
-        host: ec2-18-221-232-111.us-east-2.compute.amazonaws.com
-        username: root
+        host: ${{ secrets.REMOTE_HOST }}
+        username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SSH_KEY }}
         rm: true        
-        source: "target/*.war"
-        target: "/opt/apache-tomcat-9.0.56/webapps/springboot.war"
+        source: "**/*.war"
+        target: "${{ secrets.REMOTE_DIR }}/springboot.war"
