--- a/.github/workflows/tomcat-deploy.yml
+++ b/.github/workflows/tomcat-deploy.yml
@@ -48,7 +48,6 @@ jobs:
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
-        key: ${{ secrets.SSH_KEY }}
-        rm: true        
+        key: ${{ secrets.SSH_KEY }}     
         source: "**/*.war"
-        target: "${{ secrets.REMOTE_DIR }}/springboot.war"
+        target: "${{ secrets.REMOTE_DIR }}"
