--- a/.github/workflows/tomcat-deploy.yml
+++ b/.github/workflows/tomcat-deploy.yml
@@ -46,10 +46,11 @@ jobs:
 #           -Dsonar.sources=src/
 
     - name: Deploy to tomcat
-      uses: appleboy/scp-action@master
+      uses: ./
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
-        key: ${{ secrets.SSH_KEY }}     
-        source: "target/*.war"
-        output_location: "${{ secrets.REMOTE_DIR }}"
+        privateKey: ${{ secrets.SSH_KEY }}     
+        local: "target/*.war"
+        remote: "${{ secrets.REMOTE_DIR }}"
+        rmRemote: true
