--- a/.github/workflows/tomcat-deploy.yml
+++ b/.github/workflows/tomcat-deploy.yml
@@ -46,11 +46,10 @@ jobs:
 #           -Dsonar.sources=src/
 
     - name: Deploy to tomcat
-      uses: appleboy/scp-action@master
+      uses: garygrossgarten/github-action-scp@release
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SSH_KEY }}
-        rm: true
-        source: "**/*.war"
-        target: "${{ secrets.REMOTE_DIR }}/single/"
+        local: "**/*.war"
+        remote: "${{ secrets.REMOTE_DIR }}/single/"
