--- a/.github/workflows/tomcat-deploy.yml
+++ b/.github/workflows/tomcat-deploy.yml
@@ -7,8 +7,7 @@ env:
   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
   TOMCAT_HOST: 18.221.232.111
   ARTIFACT_PATH: target/*war
-#   CONTEXT_PATH: springboot
-#   PORT: 8080
+  DESTINATION_PATH: /opt/apache-tomcat-9.0.56/webapps/springboot.war  
   
 on:
   push:
@@ -36,6 +35,7 @@ jobs:
       continue-on-error: ${{ env.CONTINUE_ON_ERROR }}
       with:
         java-version: '1.8'
+        
     - name: Build with Maven
       run: mvn clean package --file pom.xml
       
@@ -46,6 +46,11 @@ jobs:
         args: >
           -Dsonar.projectKey=hello-springboot
           -Dsonar.sources=src/
-
-    - name: Deploy to tomcat
-      run: curl -v -u ${{ secrets.TOMCAT_USER }}:${{ secrets.TOMCAT_PASSWORD }} -T ${{ env.ARTIFACT_PATH }} 'http://'${{ env.TOMCAT_HOST }}':'${{ env.PORT }}'/manager/text/deploy?path=/'${{ env.CONTEXT_PATH }}''
+          
+    - name: Upload repo to remote server
+      env:
+           SSH_AUTH_SOCK: /tmp/ssh_agent.sock    
+      run: |
+        ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+        ssh-add - <<< "${{ secrets.SSH_KEY }}"
+        scp -o StrictHostKeyChecking=no ${{ env.ARTIFACT_PATH }} ${{ secrets.TOMCAT_USER }}@${{ env.TOMCAT_HOST }}:${{ env.DESTINATION_PATH }}
