--- a/.github/workflows/tomcat-deploy.yml
+++ b/.github/workflows/tomcat-deploy.yml
@@ -39,13 +39,13 @@ jobs:
     - name: Build with Maven
       run: mvn clean package --file pom.xml
       
-    - name: SonarQube Scan
-      run: mvn sonar:sonar -Dsonar.host.url=${{ env.SONAR_HOST_URL }} -Dsonar.login=${{ env.SONAR_TOKEN }}
-    - uses: sonarsource/sonarqube-scan-action@master 
-      with:
-        args: >
-          -Dsonar.projectKey=hello-springboot
-          -Dsonar.sources=src/
+#     - name: SonarQube Scan
+#       run: mvn sonar:sonar -Dsonar.host.url=${{ env.SONAR_HOST_URL }} -Dsonar.login=${{ env.SONAR_TOKEN }}
+#     - uses: sonarsource/sonarqube-scan-action@master 
+#       with:
+#         args: >
+#           -Dsonar.projectKey=hello-springboot
+#           -Dsonar.sources=src/
           
     - name: Upload repo to remote server
       env:
